--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -149,4 +149,21 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <profiles>
+        <profile>
+			<id>release</id>
+			<build>
+				<plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                    </plugin>
+				</plugins>
+			</build>
+		</profile>
+    </profiles>
 </project>
