--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -21,4 +21,21 @@
     <modules>
         <module>faker</module>
     </modules>
+    <profiles>
+        <profile>
+			<id>release</id>
+			<build>
+				<plugins>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                    </plugin>
+				</plugins>
+			</build>
+		</profile>
+    </profiles>
 </project>
