--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,12 @@
                     <artifactId>maven-source-plugin</artifactId>
                     <executions>
                         <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                        <execution>
                             <id>attach-sources</id>
                             <goals>
                                 <goal>jar</goal>
