--- a/sample-mono/database.properties
+++ b/sample-mono/database.properties
@@ -27,9 +27,9 @@ target.database.driver = com.mysql.cj.jdbc.Driver
 #target.database.url = jdbc:h2:file:${project.build.directory}/h2db/db/pmi
 #target.database.url = jdbc:postgresql://localhost:5432/database
 #target.database.url = jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-target.database.baseurl = jdbc:mysql://localhost:3307
+target.database.baseurl = jdbc:mysql://localhost:65108
 target.database.options = zeroDateTimeBehavior=convertToNull
-target.database.url = ${source.database.baseurl}?${source.database.options}
+target.database.url = ${target.database.baseurl}?${target.database.options}
 target.datasource.defaultSchemaName = test
 target.datasource.username = test
 target.datasource.password = test
